# epicport

./: .gitignore  README.md
emscripten/: compile.sh  js-transform.pl  pre-api.coffee
emscripten/xcom/: CMakeLists.txt
emscripten/xcom/patch/src/: main.cpp  pch.h
emscripten/xcom/patch/src/Battlescape/: BattlescapeState.cpp
emscripten/xcom/patch/src/Engine/: Exception.cpp  Flc.cpp  Flc.h  Game.cpp  Game.h  Music.cpp  Music.h  Options.cpp  Screen.cpp  Sound.cpp  Surface.cpp  Surface.h  Surface_ep.cpp  Surface_ep.h
emscripten/xcom/patch/src/Interface/: TextEdit.cpp
emscripten/xcom/patch/src/Menu/: MainMenuState.cpp  PauseState.cpp  StartState.cpp  StartState.h
emscripten/xcom/patch/src/Savegame/: SavedGame.cpp  SerializationHelper.cpp
native/: api.cpp
native/includes/epicport/: api.h
web/: build.sbt  i18n.pot
web/config/: akka.conf  application.conf  epicport.conf  logback.xml  xitrum.conf
web/config/i18n/: en.mo  en.po  hunspell-en.sh  hunspell-ru.sh  hunspell.ignore  ru.mo  ru.po
web/project/: plugins.sbt
web/public/: robots.txt  sitemap.xml
web/public/android/dune2/: version.json
web/public/css/: app.css
web/public/emscripten/: README.rst
web/public/js/: jquery.valid8.js
web/public/ttd/: perfomance_test.sav
web/public/v2/css/: game-description.css  index.css
web/public/v2/js/: index.js
web/public/v3/: I18NRoot.js
web/public/v3/bower_components/angularjs/: .bower.json
web/src/main/coffee/: compile.sh
web/src/main/coffee/core/: dialog.coffee  login.coffee  navbar.coffee
web/src/main/coffee/game/: api.coffee  caesaria.coffee  canvas.coffee  dune2.coffee  module.coffee  ttd.coffee  xcom.coffee
web/src/main/resources/i18n/: en.mo  en.po  ru.mo  ru.po
web/src/main/scala/com/epicport/: Boot.scala  Configuration.scala
web/src/main/scala/com/epicport/action/: DefaultLayout.scala  Errors.scala  Redirect301.scala  Register.scala  RenderHelper.scala  Root.scala  StaticFile.scala
web/src/main/scala/com/epicport/action/android/: Update.scala
web/src/main/scala/com/epicport/action/core/: CoreComponent.scala  Link.scala  LoginComponent.scala  NavbarComponent.scala
web/src/main/scala/com/epicport/action/game/: CaesariaBrowser.scala  CanvasComponent.scala  Dune2.scala  Game.scala  GameDescription.scala  GameDescriptionV2.scala  GameLayout.scala  StaticPage.scala  Ttd.scala  Xcom.scala
web/src/main/scala/com/epicport/action/privates/: Private.scala
web/src/main/scala/com/epicport/action/xhr/login/: Login.scala
web/src/main/scala/com/epicport/action/xhr/save/: List.scala  Push.scala  SavesXhr.scala
web/src/main/scala/com/epicport/action/xhr/storage/: Content.scala  List.scala  Proxy.scala  Push.scala  Storage.scala
web/src/main/scala/com/epicport/db/: Db.scala  User.scala
web/src/main/scala/com/epicport/fs/: FileModificationWatcher.scala
web/src/main/scala/com/epicport/i18n/: I18N.scala
web/src/main/scala/com/epicport/player/: Player.scala  Profile.scala
web/src/main/scala/com/epicport/secret/: Secret.scala
web/src/main/scala/com/epicport/ws/: WS.scala
web/src/main/scalate/com/epicport/action/: DefaultLayout.ssp  EmptyLayout.ssp  I18NRoot.ssp  NotFoundError.ssp  Register.ssp  ServerError.ssp
web/src/main/scalate/com/epicport/action/core/: _core.ssp  _login.ssp  _navbar.ssp
web/src/main/scalate/com/epicport/action/game/: CaesariaBrowser.ssp  Dune2.ssp  Dune2Android.ssp  GameDescription.ssp  GameDescriptionV2.ssp  StaticPage.ssp  Ttd.ssp  Xcom.ssp  XcomStory.ssp  _canvas.ssp  _dune2.ssp  _dune2_android.ssp  _dune2_story.ssp  _ttd-story.ssp  _ttd.ssp  _ttd_story.ssp  _xcom-story.ssp  _xcom_story.ssp
web/src/main/scalate/com/epicport/action/privates/: WargusPrivateAction.ssp
